Upgrade Java 17 in xacml-pdp
Issue-ID: POLICY-4821
Change-Id: I96843c7be9f0ef93ca76c85d682fffb2bdfaff13
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>